# Rikugan

./: AGENTS.md  DEVELOPMENT.md  README.md  ci-local.ps1  ci-local.sh  ida-plugin.json  install.ps1  install.sh  install_binaryninja.bat  install_ida.bat  install_ida.sh  plugin.json  pyproject.toml  requirements.txt  sidebar_redesign.md
.github/workflows/: ci.yml
rikugan/: constants.py
rikugan/agent/: bulk_renamer.py  context_window.py  exploration_mode.py  loop.py  minify.py  subagent.py  subagent_manager.py  system_prompt.py  turn.py
rikugan/core/: config.py  crypto.py  dependencies.py  external_sources.py  host.py  log_sinks.py  logging.py  profile.py  sanitize.py  thread_safety.py  types.py
rikugan/mcp/: client.py  manager.py
rikugan/providers/: anthropic_provider.py  base.py  codex_provider.py  gemini_provider.py  minimax_provider.py  ollama_provider.py  openai_compat.py  openai_provider.py  registry.py
rikugan/skills/: loader.py  registry.py
rikugan/state/: history.py  session.py
rikugan/tools/: base.py  pagination.py  registry.py  value_format.py  xrefs.py
rikugan/ui/: a2a_widget.py  agent_tree.py  bulk_renamer.py  chat_view.py  context_bar.py  markdown.py  message_widgets.py  mutation_log_view.py  panel_core.py  plan_view.py  qt_compat.py  session_controller_base.py  settings_dialog.py  styles.py  tool_widgets.py  tools_panel.py
tests/: qt_stubs.py  test_qt_compat.py  test_tool_modules.py  test_tool_registry_integration.py  test_version_metadata.py
tests/agent/: test_agent_loop.py  test_exploration_loop.py  test_session_controller.py  (+1 more)
(+45 files in other folders)
