[project]
name = "rikugan"
version = "1.3.2"
requires-python = ">=3.11"
dependencies = [
    "anthropic==0.103.1",
    "openai==2.37.0",
    "google-genai==2.4.0",
    "mcp==1.27.1",
    "tomli==2.4.1",
    "cryptography==48.0.0",
    "ida-domain==0.5.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "RUF"]
ignore = ["E501", "B008", "UP042"]

[tool.ruff.lint.per-file-ignores]
"rikugan/binja/**" = ["F401", "E741"]
"rikugan/ida/**" = ["F401"]
"rikugan/core/sanitize.py" = ["RUF003"]
"rikugan/tools/functions.py" = ["RUF001"]
"rikugan/ui/plan_view.py" = ["RUF001"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
no_error_summary = true

[[tool.mypy.overrides]]
module = ["rikugan.core.*", "rikugan.providers.*"]
disallow_untyped_defs = true

[dependency-groups]
dev = [
    "desloppify==0.9.3",
    "mypy==2.1.0",
    "pytest==9.0.3",
    "ruff==0.15.13",
]
